vlib/v/checker/tests/missing_export_attr_arg_err.vv
@[export]
fn foo() string {
	return 'foo'
}
